minor fix for decoding

--- a/kgrid_sdk/KOInfoPage.html
+++ b/kgrid_sdk/KOInfoPage.html
@@ -119,7 +119,8 @@
         (async () => {
             //const metadata = JSON.parse(localStorage.getItem('metadata'));
             const params = new URLSearchParams(window.location.search);
-            const metadata = JSON.parse(decodeURIComponent(params.get('data')));
+            //const metadata = JSON.parse(decodeURIComponent(params.get('data')));
+            const metadata = JSON.parse(params.get('data'));
             const baseIRI = params.get('base')
             // Use jsonld.js to expand the metadata
             const expanded = await jsonld.expand(metadata, { base: baseIRI });
